<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.chessapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.chessapp.ui.home.HomeFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_clubs"
        android:name="com.example.chessapp.ui.placeslist.clubs.PlacesListFragment"
        android:label="@string/menu_clubs"
        tools:layout="@layout/fragment_places_list" />
    <fragment
        android:id="@+id/nav_cafes"
        android:name="com.example.chessapp.ui.placeslist.cafes.PlacesListFragment"
        android:label="@string/menu_cafes"
        tools:layout="@layout/fragment_places_list" />
    <fragment
        android:id="@+id/nav_outdoors"
        android:name="com.example.chessapp.ui.placeslist.outdoors.PlacesListFragment"
        android:label="@string/menu_outdoors"
        tools:layout="@layout/fragment_places_list" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.chessapp.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_puzzles"
        android:name="com.example.chessapp.ui.home.HomeFragment"
        android:label="@string/menu_puzzles"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_gps"
        android:name="com.example.chessapp.ui.home.HomeFragment"
        android:label="@string/menu_gps"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_bonus"
        android:name="com.example.chessapp.ui.home.HomeFragment"
        android:label="@string/menu_bonus"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.chessapp.ui.home.HomeFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_home" />

</navigation>