<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="8dp"
    android:foregroundTint="#EA0C0C">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/historyHeadTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:textSize="23sp"
            android:gravity="center"
            android:text="@string/history_top"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/historyHeadBodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:autoLink="web"
            android:text="@string/history_body"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            />

        <TextView
            android:id="@+id/historyHeadCitateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/history_head_citate" />

        <TextView
            android:id="@+id/historyDownTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_head_title_down"
            android:textSize="19sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"

            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>